align checkboxes correctly.

--- a/app.css
+++ b/app.css
@@ -7,6 +7,11 @@
   margin-bottom: 5px;
 }
 
+input[type="checkbox"]{
+  margin-left: 0 !important;
+}
+
+
 .alteryx-toggle-switch-outer {
   position: absolute !important;
   right: 4px;
@@ -72,4 +77,7 @@
 }
 #xvars label {
   margin-bottom: 5px;
+}
+#weight-vec {
+  margin-left: 30px;
 }
